testsuite/tests/typecheck/should_fail/UnliftedNewtypesOverlap.stderr

UnliftedNewtypesOverlap.hs:13:15: error:
    Conflicting family instance declarations:
      DF -- Defined at UnliftedNewtypesOverlap.hs:13:15
      DF -- Defined at UnliftedNewtypesOverlap.hs:14:18
